examples/errors/redeclare.jc
// Should raise redeclare error
keep user = "John";
keep user = "Luke"; // ERROR: Variable already declared
